--- a/content/posts/2020-07-03.how-to-set-up-sapper-with-cpanel.md
+++ b/content/posts/2020-07-03.how-to-set-up-sapper-with-cpanel.md
@@ -2,7 +2,7 @@
 title: How to Set up Sapper With cPanel
 tags: tutorial, cPanel, nodejs, pm2, sapper, hosting
 description: This post will show and guide you on how to set up a Node.js application, specifically Sapper app with cPanel in a shared hosting with a Node engine enabled.
-image: https://pixabay.com/get/55e4d5454c50ab14f6d1867dda35367b1c3cd9ed5b58734d_1920.jpg
+image: https://cdn.pixabay.com/photo/2018/05/16/18/16/cloud-3406627_960_720.jpg
 ---
 
 I don't think I've seen a single post on how to properly set up a Node.js application in a shared or dedicated hosting with cPanel. Especially with what small community Svelte has, I thought I may as well contribute by sharing my experience on setting up a production-ready application bundle.
