Refactor: Change front matter keys

--- a/content/posts/2020-04-08.complete-flutter-development-automation.md
+++ b/content/posts/2020-04-08.complete-flutter-development-automation.md
@@ -1,8 +1,9 @@
 ---
 title: Complete Flutter Development Automation
 tags: ppl2020, flutter, devops, gitlab
-updated: 2020-04-30
 description: Flutter is an amazing framework to build mobile apps. This post will explain how my team and I tackles automation using GitLab pipelines for linting, testing, code coverage and quality, and deployment.
+
+date_updated: 2020-04-30
 ---
 
 ![Flutter Logo](https://upload.wikimedia.org/wikipedia/commons/1/17/Google-flutter-logo.png)
@@ -190,7 +191,7 @@ Like any other projects, having to wait and download the same exact stuff again 
 
 ```yaml
 ~.gitlab-ci.yml
-image: ignatiusmb/ppl2020-flutter:latest
+image:en: ignatiusmb/ppl2020-flutter:latest
 
 # This is optional, you can follow this stages exactly or have your own
 stages:
@@ -231,7 +232,7 @@ You'll need to pass the results as an artifact for the next stage which they nee
 ```yaml
 ~.gitlab-ci.yml
 analysis:quality:
-  image: ignatiusmb/sonarscanner-flutter:1.0.0
+  image:en: ignatiusmb/sonarscanner-flutter:1.0.0
   stage: analysis
   dependencies:
     - test:coverage
