--- a/content/posts/2020-07-10.semantic-commit-message.md
+++ b/content/posts/2020-07-10.semantic-commit-message.md
@@ -2,7 +2,7 @@
 title: Style Guide to a Semantic Commit Message
 tags: tutorial, git
 description: A commit message, if structured correctly and written properly could summarize a thousand changes into just a paragraph, or even a title.
-image:
+image:en:
 ---
 
 This will be a quick and short post, so feel free to spare a minute to read how I summarize changes within my code, and what style guide I'm referring to.
