--- a/content/posts/2020-07-10.semantic-commit-message.md
+++ b/content/posts/2020-07-10.semantic-commit-message.md
@@ -2,7 +2,8 @@
 title: Style Guide to a Semantic Commit Message
 tags: tutorial, git
 description: A commit message, if structured correctly and written properly could summarize a thousand changes into just a paragraph, or even a title.
-image:en:
+
+image:en: https://external-content.duckduckgo.com/iu/?u=https%3A%2F%2Fcodereviewvideos.com%2Fblog%2Fwp-content%2Fuploads%2F2015%2F06%2Fgit-goodness.gif&f=1&nofb=1
 ---
 
 This will be a quick and short post, so feel free to spare a minute to read how I summarize changes within my code, and what style guide I'm referring to.
