Apply suggestions from code review

--- a/content/posts/2020-04-08.complete-flutter-development-automation.md
+++ b/content/posts/2020-04-08.complete-flutter-development-automation.md
@@ -191,7 +191,7 @@ Like any other projects, having to wait and download the same exact stuff again 
 
 ```yaml
 ~.gitlab-ci.yml
-image:en: ignatiusmb/ppl2020-flutter:latest
+image: ignatiusmb/ppl2020-flutter:latest
 
 # This is optional, you can follow this stages exactly or have your own
 stages:
@@ -232,7 +232,7 @@ You'll need to pass the results as an artifact for the next stage which they nee
 ```yaml
 ~.gitlab-ci.yml
 analysis:quality:
-  image:en: ignatiusmb/sonarscanner-flutter:1.0.0
+  image: ignatiusmb/sonarscanner-flutter:1.0.0
   stage: analysis
   dependencies:
     - test:coverage
