--- a/content/curated/monthly/202008.md
+++ b/content/curated/monthly/202008.md
@@ -33,7 +33,7 @@ Even though this article wasn't published in August, it really helped me underst
 
 ## Content of the month
 
-![Kill la Kill backdrop](https://image.tmdb.org/t/p/original/yECUoiSTtm3MV6BRc5WV1bh6xS7.jpg "Source: TMDB | [See Review](reviews?query=Kill%20la%20Kill)")
+![Kill la Kill backdrop](https://image.tmdb.org/t/p/original/yECUoiSTtm3MV6BRc5WV1bh6xS7.jpg "[[TMDB](https://image.tmdb.org/t/p/original/yECUoiSTtm3MV6BRc5WV1bh6xS7.jpg)] Kill la Kill | [See Review](reviews?query=Kill%20la%20Kill)")
 
 August's content of the month is an anime that goes by the name of *Kill la Kill* or **Dressed to Kill**. An over the top action anime with a unique art style, absolutely stellar soundtracks, and a story so good it's on par with FMA. Check out the full review in [Reviews](reviews) section, or click the link in the caption above.
 
