--- a/content/curated/monthly/202009.md
+++ b/content/curated/monthly/202009.md
@@ -39,13 +39,19 @@ It's a well-written article with good examples for me to learn and understand ho
 
 ## Content of the month
 
-![The God of High School banner](https://image.tmdb.org/t/p/original/bhPDfwKeRklEfeOgNzbbz0tUggq.jpg "[[TMDB](https://image.tmdb.org/t/p/original/bhPDfwKeRklEfeOgNzbbz0tUggq.jpg)] The God of High School")
+![The God of High School banner](https://image.tmdb.org/t/p/original/bhPDfwKeRklEfeOgNzbbz0tUggq.jpg "[[TMDB](https://image.tmdb.org/t/p/original/bhPDfwKeRklEfeOgNzbbz0tUggq.jpg)] The God of High School | [See Review](reviews?query=The%20God%20of%20High%20School)")
 
 The God of High School just aired their final episode for Season 1 on 28th of August and it was amazing. A manhwa adaptation with full-throttle action-packed episodes. I need to compare this to Tower of God, since they're both a webtoon turned anime, and because it was quite a letdown for me. Although the story is where it shines, there's really no action in Tower of God and when there is, it ends in with just a move. It left me unsatisfied even though I still enjoy going through the story.
 
 Meanwhile, The God of High School seems to fill in all the missing pieces Tower of God left me and felt like the complete opposite of it. It's as if this show was made just to flex on their fighting scenes, each punches and kicks feels like it's taken straight from a real martial arts fights, and every fight scene is so well choreographed and beautifully animated. I'm not saying the story is bad, but it might seem too fast for some people's taste. Anyways, it's still an amazing show nonetheless, regardless of the story's pace.
 
 ### Honorable content mentions
+
+Other shows that aired their final episode this month too, just in time for the new shows and seasons starting this fall in October.
+
+- [[DevMauss](reviews?query=The%20Misfit%20of%20Demon%20King%20Academy)] The Misfit of Demon King Academy
+- [[DevMauss](reviews?query=Sword%20Art%20Online%20Alicization)] Sword Art Online: Alicization
+- [[DevMauss](reviews?query=Deca%20Dence)] Deca Dence
 
 ## Music of the month | [Spotify Playlist](spotify:playlist:0ANZKUWgykWgF1aNH9aHq0)
 
