Change YouTube links to embedded videos

--- a/content/curated/monthly/202008.md
+++ b/content/curated/monthly/202008.md
@@ -39,7 +39,7 @@ August's content of the month is an anime that goes by the name of *Kill la Kill
 
 ### Honorable content mentions
 
-- [[YouTube](https://youtu.be/TBO9ANTBCjM)] SpongeBob Anime #1 - Bubble Bass Arc
+![!YouTube:disclosure](TBO9ANTBCjM "SpongeBob Anime #1 - Bubble Bass Arc")
 
 A really amazing work of art from a YouTuber who has made SpongeBob into an anime, separated according to its own arcs. It's not just a hobby project, it's fully voice acted and beautifully animated, not to mention its amazing soundtracks. If you watched SpongeBob in your childhood, you'll definitely need to watch this because it's just amazing.
 
@@ -71,19 +71,19 @@ This time it's actually an opening song from an anime, although I think this OP 
 
 ### Honorable music mentions
 
-- [[Spotify](spotify:track:32VX3DJCxPY3pMjirgOayx)] *Ambiguous* by GARNiDELiA
+![!YouTube:disclosure](K42ED-7PWAo "[[Spotify](spotify:track:32VX3DJCxPY3pMjirgOayx)] *Ambiguous* by GARNiDELiA ")
 
 Such a good and catchy OP from *Kill la Kill*. I'm the type of person who needs to see "it" first before I can fully feel the vibe and immerse myself in it, but I know some of you can listen to songs from Disney movies before it even hits the theater, so do what you want with this. But, I do recommend you to watch the anime first.
 
-- [[YouTube](https://youtu.be/Y-MNeN5dDtI) | [Spotify](spotify:track:0cR04cbujsPTTyKUazySY0)] *Open Blinds* by DROELOE
+![!YouTube:disclosure](Y-MNeN5dDtI "[[Spotify](spotify:track:0cR04cbujsPTTyKUazySY0)] *Open Blinds* by DROELOE")
 
 DROELOE releases are always chill and melow, *Open Blinds* is no different than that. It suits the title well and puts you in the mood, you'll feel like you've just woke up on your bed in your room with sunray hitting your face.
 
-- [[YouTube](https://youtu.be/Qola1w5lkOM) | [Spotify](spotify:track:1sURUh8IehzWWp4udnhMpj)] *Butterfly Effect VIP* by Koven
+![!YouTube:disclosure](Qola1w5lkOM "[[Spotify](spotify:track:1sURUh8IehzWWp4udnhMpj)] *Butterfly Effect VIP* by Koven")
 
 The original *Butterfly Effect* already has a place in me from the very first time I heard it in COTW Ep. 289 and this caught me off guard. It brings another take with a more upbeat style compared to the previous one.
 
-- [[YouTube](https://youtu.be/Ucp0F6nReyM)] *Monstercat Mix Contest 2020 Compilation* by DJ FYTR from TheOnlyPixel19
+![!YouTube:disclosure](Ucp0F6nReyM "*Monstercat Mix Contest 2020 Compilation* by DJ FYTR from TheOnlyPixel19")
 
 I've been listening to a lot of J-Pop lately and almost forgot why I used to love and listen to Monstercat almost everyday. This mix reminds me again and really brings back memories, especially all the crazy good mixes from the yearly contest around this time.
 
@@ -95,15 +95,17 @@ Have you ever wondered where that random ringing sound comes from? Did you somet
 
 ### Honorable video mentions
 
-- [[YouTube](https://youtu.be/jI3wTCgno9A)] The Truth Behind the Hidden Worms in Your Strawberries
+![!YouTube:disclosure](jI3wTCgno9A "The Truth Behind the Hidden Worms in Your Strawberries")
 
 Practically all berries has worms in it, but they're not all dangerous or harmful.
 
-- [[YouTube](https://youtu.be/Vnsc4RNb16g)] Who Has A Cleaner Mouth, Dog or Human?
+![!YouTube:disclosure](Vnsc4RNb16g "Who Has A Cleaner Mouth, Dog or Human?")
 
 You'll think twice before letting your dog (pets) lick you in the face.
 
-- [YouTube [Part1](https://youtu.be/64nQ1KNq6C4) / [Part2](https://youtu.be/N2f_Tc0a2jU) / [Part3](https://youtu.be/jmg3Dn3OJQ8)] Fall Guys Montage from Critikal
+![!YouTube:disclosure](64nQ1KNq6C4 "[Part1] Fall Guys Montage from Critikal")
+![!YouTube:disclosure](N2f_Tc0a2jU "[Part2] Fall Guys Montage from Critikal")
+![!YouTube:disclosure](jmg3Dn3OJQ8 "[Part3] Fall Guys Montage from Critikal")
 
 Just a fun compilation of Fall Guys game play, even.. no, especially when you're just watching.
 
