Add music of the month and mentions

--- a/content/curated/monthly/202009.md
+++ b/content/curated/monthly/202009.md
@@ -55,9 +55,21 @@ Other shows that aired their final episode this month too, just in time for the 
 
 ## Music of the month | [Spotify Playlist](spotify:playlist:0ANZKUWgykWgF1aNH9aHq0)
 
-![!YouTube]({youtube_id} "caption")
+![!YouTube](awzyLcwGpcA "[[Spotify](spotify:track:0pS88ATbKJ70cmywT4oZol)] *Ticking Clocks* by Jnel ft. Kyra Grove")
 
 ### Honorable music mentions
+
+![!YouTube:disclosure](n7VZxg9pxkg "[[Spotify](spotify:track:1dGF5ymTyBB2ZmOypkeU1F)] *veil* by 須田景凪 (Keina Suda)")
+
+I just started watching Fire Force season 1 and their ED was that good and so catchy that I didn't notice I've added it to my playlist before I even watched it.
+
+![!YouTube:disclosure](M2E79usIm2A "[[Spotify](spotify:track:5wPRJfP6UZXYori1sb1SJx)] *Together* by Pegboard Nerds & More Plastic")
+
+Pegboard Nerds & More Plastics returning once again to Monstercat with an amazing Instinct release for their Manifest/Together album.
+
+![!YouTube:disclosure](jb4ybTQwcdw "[[Spotify](spotify:track:5wPRJfP6UZXYori1sb1SJx)] *main actor* by 美波 (Minami)")
+
+Even after a month, I really can't stop listening to these beautiful songs by Minami. This song was one of the earliest produced by her and its lyrics isn't just like songs these days that repeat the same word over and over again, like that one song with the same abbreviation as the wireless application protocol for example.
 
 ## Video of the month | [YouTube Playlist](https://www.youtube.com/playlist?list=PLtthNj7yut54HUoGX6Kw1YlCrF6vR4G7f)
 
@@ -97,7 +109,7 @@ Ref: [Bloomberg](https://www.bloomberg.com/news/articles/2020-09-18/facebook-acc
 
 ***
 
-That's it for our recap of {Month} {Year}, folks! Stay safe and have a great {NextMonth} 👋
+That's it for our recap of September 2020, folks! Stay safe and have a great October 👋
 
 As always, let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
 
