Add video and its mentions of the month

--- a/content/curated/monthly/202009.md
+++ b/content/curated/monthly/202009.md
@@ -69,13 +69,32 @@ Pegboard Nerds & More Plastics returning once again to Monstercat with an amazin
 
 ![!YouTube:disclosure](jb4ybTQwcdw "[[Spotify](spotify:track:5wPRJfP6UZXYori1sb1SJx)] *main actor* by 美波 (Minami)")
 
-Even after a month, I really can't stop listening to these beautiful songs by Minami. This song was one of the earliest produced by her and its lyrics isn't just like songs these days that repeat the same word over and over again, like that one song with the same abbreviation as the wireless application protocol for example.
+Even after a month, I really can't stop listening to these beautiful songs by Minami. This was the first single and the first video uploaded to YouTube. Its lyrics feels like an actual person expressing themselves at their hardest times, I'm sure some of you would agree.
 
 ## Video of the month | [YouTube Playlist](https://www.youtube.com/playlist?list=PLtthNj7yut54HUoGX6Kw1YlCrF6vR4G7f)
 
-![!YouTube]({youtube_id} "caption")
+I was thinking about showing [how we can perform a brain surgery without a scalpel](https://youtu.be/6d_dtVTs4CM) these days, or [how complicated it is to stop climate change](https://youtu.be/wbR-5mHI6bo), or even [looking at the new neuralink](https://youtu.be/400ryImgxgE) by Elon Musk that might make those episodes from [Black Mirror](reviews?query=Black%20Mirror) come true.
+
+![!YouTube](rHiHbsN6pyQ "A different than usual vlog from LLS")
+
+But, I did follow these guys from LLS for quite some time and I've enjoyed their discussion lately. I won't spoil what they discuss in this video because you should really watch it for yourself. A little tip from me if you're easily bored watching videos longer than 10 minutes is to speed up the playback rate to 1.5x - 2.0x.
 
 ### Honorable video mentions
+
+![!YouTube:disclosure](4w_r8as4uO0 "Pub Scrubs 20")
+
+The man, the myth, the legend, he's back and danker than ever. It's been 3 years since the last upload, I've waited patiently for the return and he's actually back when we needed him the most.
+
+MikeMav was one of the first few YouTuber I've looked up to in terms of its editing skills. I've enjoyed more DotA content from him than the game itself. I'm certain you'll enjoy this if you've played DotA before, a bonus if you love memes too.
+
+![!YouTube:disclosure](W2Z7fbCLSTw "7 Database Paradigms")
+
+What a great video explaining the various database paradigms that's available right now. I've known most of them, but there's some other paradigms that I'm not aware of, and some other that I'm only interested in but haven't quite spared any time to get into, until I watched this.
+
+![!YouTube:disclosure](exCNHEGnZ5M "Netflix's Cuties has gone too far")
+![!YouTube:disclosure](6j6o85CXnyM "Cuties Is Worse Than You Think")
+
+If you still think everyone is overreacting about the new series from Netflix, watch both videos above. There's clearly something wrong with everyone who allowed this to happen.
 
 ***
 
