--- a/content/curated/digest/202009.md
+++ b/content/curated/digest/202009.md
@@ -100,27 +100,25 @@ If you still think everyone is overreacting about the new series from Netflix, w
 
 ## Headlines of the month
 
-### BitTorrent now forms a hash tree for every file in the torrent
+### libtorrent-2.0 released
 
-Ref: [libtorrent](https://blog.libtorrent.org/2020/09/bittorrent-v2/)
+Individual torrent files should be smaller in size, all files will be aligned to pieces, and the most exciting part is hash tree for every file. It means creating or moving torrents can be done more easily without having to re-hash anything if the file is identical.
+
+Ref: [[libtorrent](https://blog.libtorrent.org/2020/09/bittorrent-v2/) | [Reddit](https://www.reddit.com/r/trackers/comments/ioqif2/bittorrent_v2_now_supported_by_libtorrent20/)]
 
 ### Facebook Accused of Watching Instagram Users Through Cameras
 
-Note the word "Accused".
+Note the word "Accused". But, doesn't mean that they're not spying on you, even right now.
 
-Ref: [Bloomberg](https://www.bloomberg.com/news/articles/2020-09-18/facebook-accused-of-watching-instagram-users-through-cameras)
+Ref: [[Bloomberg](https://www.bloomberg.com/news/articles/2020-09-18/facebook-accused-of-watching-instagram-users-through-cameras)]
 
 ***
 
 ## Detailed monthly recap
 
-### {Date} - {Day}
-
-- [[Source](link)] Title
-
 ### 08 - Tuesday
 
-- [[GitHub:Linguist](https://github.com/github/linguist/pull/4979) | [GitHub:Svelte](https://github.com/sveltejs/svelte/issues/5310)] Svelte is finally un-grouped from HTML and recognized as its own independent language
+- [[GitHub/Linguist](https://github.com/github/linguist/pull/4979) | [GitHub/Svelte](https://github.com/sveltejs/svelte/issues/5310)] Svelte is finally un-grouped from HTML and recognized as its own independent language
 
 ### 11 - Friday
 
