--- a/content/curated/digest/202008.md
+++ b/content/curated/digest/202008.md
@@ -165,8 +165,9 @@ Ref: [[YouTube](https://youtu.be/msI2SxmED4E) | Reddit [P1](https://www.reddit.c
 
 ### 06
 
-- [[Reddit](https://www.reddit.com/r/awenime/comments/i4c69f/a_heros_sacrifice_megaman_zero/) | [Pixiv](https://www.pixiv.net/en/artworks/46980881)] Awesome Megaman Zero artwork
-- [[Reddit](https://www.reddit.com/r/dogs/comments/i4rzmi/discussion_please_do_not_get_a_husky_because_they/)] Do not get a dog (especially huskies) just because they're beautiful
+[[Reddit](https://www.reddit.com/r/awenime/comments/i4c69f/a_heros_sacrifice_megaman_zero/) | [Pixiv](https://www.pixiv.net/en/artworks/46980881)] Awesome Megaman Zero artwork
+
+[[Reddit](https://www.reddit.com/r/dogs/comments/i4rzmi/discussion_please_do_not_get_a_husky_because_they/)] Do not get a dog (especially huskies) just because they're beautiful
 
 ### 08
 
