Move bonus memes below closing statement

--- a/content/curated/digest/202008.md
+++ b/content/curated/digest/202008.md
@@ -245,16 +245,16 @@ Ref: [[YouTube](https://youtu.be/msI2SxmED4E) | Reddit [P1](https://www.reddit.c
 
 [[Reddit](https://www.reddit.com/r/LifeProTips/comments/ijeewa/lpt_if_youre_moving_a_fridge_and_have_to_lay_it/)] If you're moving a fridge and have to lay it on its side for any amount of time, you have to let it sit upright for 24 hours before plugging it in to allow the oil in the compressor to go back in place. Not doing this can cause serious damage
 
-## Monthly memes
+***
+
+That's it for our recap of August 2020, folks! Stay safe and have a great September 👋
+
+Let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
+
+## Bonus - Monthly memes
 
 ![!Video](https://preview.redd.it/ngwg54komaf51.gif?width=592&format=mp4&s=547dbebdc6ebd92a605a0761471a07c340d852a2 "[When client says the product sucks](https://www.reddit.com/r/ProgrammerHumor/comments/i4jdyf/when_client_says_the_product_sucks/)")
 
 ![!Video](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4 "XQC vs. Ninja - Twitch gaming summarized?")
 
 [![Macaulay Culkin tweet](https://i.redd.it/bx8j1gwdbhj51.png)](https://www.reddit.com/r/memes/comments/ihf4sd/we_feel_old/)
-
-***
-
-That's it for our recap of August 2020, folks! Stay safe and have a great September 👋
-
-Let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
