--- a/content/curated/digest/202009.md
+++ b/content/curated/digest/202009.md
@@ -100,12 +100,6 @@ If you still think everyone is overreacting about the new series from Netflix, w
 
 ## Headlines of the month
 
-### libtorrent-2.0 released
-
-Individual torrent files should be smaller in size, all files will be aligned to pieces, and the most exciting part is hash tree for every file. It means creating or moving torrents can be done more easily without having to re-hash anything if the file is identical.
-
-Ref: [[libtorrent](https://blog.libtorrent.org/2020/09/bittorrent-v2/) | [Reddit](https://www.reddit.com/r/trackers/comments/ioqif2/bittorrent_v2_now_supported_by_libtorrent20/)]
-
 ### Facebook Accused of Watching Instagram Users Through Cameras
 
 Note the word "Accused". But, doesn't mean that they're not spying on you, even right now.
@@ -116,13 +110,112 @@ Ref: [[Bloomberg](https://www.bloomberg.com/news/articles/2020-09-18/facebook-ac
 
 ## Detailed monthly recap
 
-### 08 - Tuesday
+### 01
 
-- [[GitHub/Linguist](https://github.com/github/linguist/pull/4979) | [GitHub/Svelte](https://github.com/sveltejs/svelte/issues/5310)] Svelte is finally un-grouped from HTML and recognized as its own independent language
+[[Reddit](https://www.reddit.com/r/programming/comments/ikn3pq/htop_version_300_released/) | [GitHub Changelog](https://github.com/htop-dev/htop/blob/master/ChangeLog)] Htop v3 released, also [another beautiful read from the original maintainer that's been working alone for 10+ years](https://github.com/hishamhm/htop/issues/992#issuecomment-683286672)
 
-### 11 - Friday
+### 02
 
-- [[CHANGELOG](https://code.visualstudio.com/updates/v1_49)] VS Code v1.49 released
+![!YouTube:disclosure](lG7OmThrq5g "Why bird nests aren't covered in poop")
+
+### 03
+
+![!YouTube:disclosure](Y5_37k9HdJw "The secret history of dirt")
+
+[[Reddit](https://www.reddit.com/r/jellyfin/comments/ilb2l0/dietpi_officially_supports_jellyfin_as_one_of_its/)] Dietpi officially supports Jellyfin as one of its optimized softwares 🎉
+
+### 04
+
+[[Reddit](https://www.reddit.com/r/programming/comments/imhi2j/how_google_taught_me_to_turn_impostor_syndrome/) | [Article](https://www.zainrizvi.io/blog/the-impostors-advantage/)] How Google taught me to turn Impostor Syndrome into an Advantage
+
+### 05
+
+![!YouTube:disclosure](gYbTBxPbYN4 "Wataten☆5's new song [preview is out](https://www.reddit.com/r/Watashi_ni_Tenshi/comments/imnuev/wataten5s_new_song_preview_is_out/)")
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/inom0h/lpt_always_explain_why_a_procedure_exists_so_the/)] Always explain WHY a procedure exists, so the person you're teaching doesn't blindly follow it without thinking.
+
+[[Reddit](https://www.reddit.com/r/anime/comments/imkxwd/dr_stone_stone_wars_new_visual/) | [Preview](https://img1.ak.crunchyroll.com/i/spire2/4f3c449f6e416dfead343309d39a0d9c1599176100_main.png)] "Dr. Stone: Stone Wars" new visual
+
+[![Dr. Stone: Stone Wars new visual](https://img1.ak.crunchyroll.com/i/spire2/4f3c449f6e416dfead343309d39a0d9c1599176100_main.png)](https://www.reddit.com/r/anime/comments/imkxwd/dr_stone_stone_wars_new_visual/)
+
+### 07
+
+[[libtorrent](https://blog.libtorrent.org/2020/09/bittorrent-v2/) | [Reddit](https://www.reddit.com/r/trackers/comments/ioqif2/bittorrent_v2_now_supported_by_libtorrent20/)] libtorrent-2.0 released
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/inrjkc/lpt_when_you_compare_yourself_to_others_youre/)] When you compare yourself to others, you’re almost always comparing one of your weaknesses against a strength of theirs. Don’t do that to yourself. We’re all superior at something. Capitalize on that.
+Social
+
+### 08
+
+[[GitHub/Linguist](https://github.com/github/linguist/pull/4979) | [GitHub/Svelte](https://github.com/sveltejs/svelte/issues/5310)] Svelte is finally un-grouped from HTML and recognized as its own independent language
+
+[[Reddit](https://www.reddit.com/r/anime/comments/ios5dv/it_really_picks_up_in_the_second_season_or_does/)] the "it really picks up in the second season" comparison, [click to see the full size](https://i.redd.it/uec3zx0fwwl51.png)
+
+### 11
+
+[[CHANGELOG](https://code.visualstudio.com/updates/v1_49)] VS Code v1.49 released
+
+[[Reddit Thread](https://www.reddit.com/r/AskReddit/comments/iq8f7r/what_is_a_lesson_you_learned_too_late_in_life/)] What is a lesson you learned too late in life?
+
+[[Reddit](https://www.reddit.com/r/coding/comments/iq9lor/annoying_website_features_i_face_as_a_blind_person/) | [Article](https://bighack.org/5-most-annoying-website-features-i-face-as-a-blind-screen-reader-user-accessibility/)] Annoying website features I face as a blind person
+
+### 14
+
+[[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/isj6ay/its_all_about_training_and_practising_hard/)] Next Level Badminton play! It's all about training and practising hard
+
+[[Article](https://frontend.horse/articles/buttons-that-spark-joy/)] Buttons that Spark Joy
+
+![!Video](https://external-preview.redd.it/wnvYJKhZVCOyDW89ZmntDI6QakKnSKszxZnK9HBfsr4.gif?format=mp4&s=aefdfdf1afa1529fa7d8f4e3523814679301ac4b "Top Talent! [Lightning Goaltender Andrei Vasilevskiy looks between his opponent's legs to locate puck and make behind the back glove save](https://www.reddit.com/r/toptalent/comments/is4334/lightning_goaltender_andrei_vasilevskiy_looks/)")
+
+### 15
+
+[![eldredge tie and trinity knot](https://i.redd.it/ui7iqerys9n51.jpg)](https://www.reddit.com/r/nextfuckinglevel/comments/it4mm8/wore_the_trinity_at_a_wedding_and_got_crazy/)
+
+### 17
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/iu8i8o/lpt_if_you_get_carsick_or_seasick_put_an_earplug/)] If you get carsick or seasick, put an earplug or noise-canceling EarPod (create a seal) in ONE ear and wait two minutes. Reduces nausea by 75%+
+
+[[CodePen](https://codepen.io/ricardoolivaalonso/pen/yLOpNdZ)] 3D Modern House in pure CSS
+
+[![update on Python 4](https://i.redd.it/ayxwpuasjjn51.png)](https://www.reddit.com/r/Python/comments/itzn13/an_update_on_python_4/)
+
+### 18
+
+[[Reddit](https://www.reddit.com/r/LifeProTips/comments/iut7y5/lpt_replace_the_en_on_wikipedia_with_simple_to/)] replace the "en." on Wikipedia with "simple." to get a far less complicated version of the article like it was written for five-year-olds
+
+[[Reddit](https://www.reddit.com/r/javascript/comments/iv376z/how_we_wrote_the_fastest_javascript_ui_framework/) | [Medium](https://medium.com/@ryansolid/how-we-wrote-the-fastest-javascript-ui-framework-again-db097ddd99b6)] How we wrote the Fastest JavaScript UI Framework, Again!
+
+### 19
+
+[[Reddit](https://www.reddit.com/r/swordartonline/comments/ivuk06/sword_art_online_progressive_anime_announced/) | [SAO-P Website](https://sao-p.net/)] Sword Art Online: Progressive anime announced
+
+### 20
+
+[[Reddit](https://www.reddit.com/r/swordartonline/comments/iwaaf1/this_is_the_same_progressive_art_from_earlier_but/) | [Raw Image](https://i.ibb.co/5819Cvm/sao-progressive-2x.png)] SAO Progressive art upscaled to 4000x5340
+
+### 21
+
+[[GitHub](https://github.com/dwmkerr/hacker-laws#kernighans-law)] Kernighan's Law - Debugging is twice as hard as writing the code in the first place. Therefore, if you write the code as cleverly as possible, you are, by definition, not smart enough to debug it.
+
+[![fall 2020 anime calender](https://i.redd.it/5n0tkv8jgeo51.png)](https://www.reddit.com/r/anime/comments/iwqe2o/fall_2020_anime_calendar/)
+
+### 23
+
+[[Reddit](https://www.reddit.com/r/anime/comments/ixv83r/rezero_s2_was_planned_to_start_on_april_1_subarus/) | [Twitter](https://twitter.com/nezumiironyanko/status/1308274355642626048?s=20)] Re:Zero S2 was planned to start on April 1 Subaru's Birthday and end on September 23 Emilia's Birthday
+
+### 26
+
+[[Reddit](https://www.reddit.com/r/javascript/comments/j02xf3/elderjs_a_svelte_framework_and_static_site/) | [Website](https://elderguide.com/tech/elderjs/)] Elder.js: A Svelte Framework and Static Site Generator - V1 released! 18000 pages in under 8 minutes
+
+### 28
+
+[[Reddit](https://www.reddit.com/r/Cringetopia/comments/j0y3rq/oh/)] The epitome of a know-it-all cringe
+
+[[Reddit](https://www.reddit.com/r/web_design/comments/j1dorv/dogstudio_stunning_use_of_threejs_webgl_ive_never/) | [dogstudio.co](https://dogstudio.co/)] Dogstudio. Stunning use of threejs WebGl, I've never seen transitions this smooth.
+
+### 29
+
+[[yui540.graphics](https://www.yui540.graphics/)] Amazing web animations done with CSS and JS
 
 ***
 
@@ -130,6 +223,48 @@ That's it for our recap of September 2020, folks! Stay safe and have a great Oct
 
 As always, let me know if you like this format or have any feedback for the monthly digests in my Twitter, Keybase, or other socials down below.
 
-[Why bird nests aren't covered in poop](https://youtu.be/lG7OmThrq5g)
+## Bonus - Monthly memes
 
-[The secret history of dirt](https://youtu.be/Y5_37k9HdJw)
+[![optimistic developer vs. end user](https://i.redd.it/1h04vk2fjmk51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/ikvx3d/ooooof/)
+
+[![binary search meme](https://i.redd.it/xfdu3azcwuk51.png)](https://www.reddit.com/r/ProgrammerHumor/comments/ilmbyg/dont_do_it/)
+
+[![abusive relationship isn't funny](https://i.redd.it/wghrw54bnwk51.jpg)](https://www.reddit.com/r/memes/comments/ilqhi0/that_women_needs_jesus/)
+
+[![blessed are the JavaScript developers](https://i.redd.it/6u97mg9zg6l51.jpg)](https://www.reddit.com/r/programminghorror/comments/imlxie/js_is_at_it_again/)
+
+[![anime is always there for me](https://i.redd.it/1nb9vib2vvl51.jpg)](https://www.reddit.com/r/wholesomeanimemes/comments/ioptmm/anime_has_always_been_there_for_me/)
+
+[![dogbert's wisdom](https://i.redd.it/fxvtaw15zul51.jpg)](https://www.reddit.com/r/technicallythetruth/comments/ionshd/dogberts_wisdom/)
+
+[!["urgent" emails](https://i.redd.it/l4nn0r2qq0m51.png)](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/ip5vqm/send_me_a_ticket_tomorrow/)
+
+[![clients be like "I found someone cheaper"](https://external-preview.redd.it/0SQEEK6OSigBxfEU1RmUNdefxmIRo1wZerMCpnikqa4.jpg?auto=webp&s=395c277be6aa9f78ed69c8172dc463a1b674530b)](https://www.reddit.com/r/memes/comments/islt4h/you_get_what_you_paid_for/)
+
+[![code I wrote today vs. then](https://i.redd.it/sfq66mxdk7o51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/iw53om/is_it_me/)
+
+[![Coming back to an issue you opened three years ago](https://i.redd.it/gvcd6r24u8o51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/iw8gmn/coming_back_to_an_issue_you_opened_three_years_ago/)
+
+[![attention span of the internet summarized](https://i.redd.it/5uz1e824tfo51.jpg)](https://www.reddit.com/r/dankmemes/comments/iwud0r/the_attention_span_of_the_internet_summarised/)
+
+[![garbage collection](https://i.redd.it/8enervg2wjo51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/ix74sv/garbage_collection/)
+
+[![when people ask me to recommend a text editor](https://i.redd.it/m1puenbcfzo51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/iyluc4/kaboom/)
+
+![!Video](https://i.imgur.com/0GO8a9o.mp4 "[[Reddit](https://www.reddit.com/r/HighQualityGifs/comments/iywgrd/something_stinks_here/)]")
+
+[![users be like](https://i.redd.it/lktudl5uuip51.jpg)](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/j09ghm/users_be_like/)
+
+![!Video](https://v.redd.it/2o28y6og1zp51/DASH_720.mp4 "[What my company thinks I do as a software developer](https://www.reddit.com/r/ProgrammerHumor/comments/j1nbk4/what_my_company_thinks_i_do_as_a_software/)")
+
+![!Video](https://v.redd.it/41brqx6mexp51/DASH_720.mp4 "[Husky dies inside](https://www.reddit.com/r/WatchPeopleDieInside/comments/j1gu1q/husky_gets_hit/)")
+
+![!Video](https://v.redd.it/ds9xe0udbtp51/DASH_720.mp4 "[Linux users installing a web browser](https://www.reddit.com/r/pcmasterrace/comments/j156nj/bro_you_still_use_windows/)")
+
+[![lollipops are weird](https://i.redd.it/o35eygsroxp51.png)](https://www.reddit.com/r/technicallythetruth/comments/j1i0j9/this_ruined_my_day_completely/)
+
+[![Every software engineer has experience this.](https://i.redd.it/dy6l5b4piwp51.jpg)](https://www.reddit.com/r/mildlyinfuriating/comments/j1dc3q/every_software_engineer_has_experience_this/)
+
+![!Video](https://i.imgur.com/cVnLrtq.mp4 "[2-100 real quick](https://www.reddit.com/r/dankmemes/comments/j1rcog/2100_real_quick/)")
+
+[![js frameworks](https://i.redd.it/bxy89v8333q51.png)](https://www.reddit.com/r/ProgrammerHumor/comments/j1ylvg/javascript_framework/)
