--- a/content/curated/digest/202008.md
+++ b/content/curated/digest/202008.md
@@ -39,7 +39,7 @@ August's content of the month is an anime that goes by the name of *Kill la Kill
 
 ### Honorable content mentions
 
-![!YouTube:disclosure](TBO9ANTBCjM "SpongeBob Anime #1 - Bubble Bass Arc")
+![!YouTube#disclosure](TBO9ANTBCjM "SpongeBob Anime #1 - Bubble Bass Arc")
 
 A really amazing work of art from a YouTuber who has made SpongeBob into an anime, separated according to its own arcs. It's not just a hobby project, it's fully voice acted and beautifully animated, not to mention its amazing soundtracks. If you watched SpongeBob in your childhood, you'll definitely need to watch this because it's just amazing.
 
@@ -59,31 +59,31 @@ Uploaded on June 30 this year (a little late to the party but better late than n
 
 This month's choice is a really tough one to choose, there's a couple of nominees for this spot and all of them is from Minami. Almost every of her MVs I watch and listen are absolute bangers, and this one's are no different, the only reason *Waiting for Rain* is chosen is because it was recently released and would make more sense for this month's digest.
 
-![!YouTube:disclosure](HIRiduzNLzQ "[[Spotify](spotify:track:4FAUrZ8wdf8mV202FcEgn6)] Hollowness by Minami")
+![!YouTube#disclosure](HIRiduzNLzQ "[[Spotify](spotify:track:4FAUrZ8wdf8mV202FcEgn6)] Hollowness by Minami")
 
 Hollowness is another one from her I should at least mention here, even though it's released in 2018, its animation was already great and the music feels timeless. Other than its amazing animations and music, you can also somewhat relate to its lyrics or at the very least understand what it meant. It gives a frisson down my spine the very first time I watched it.
 
 I actually discovered **Minami** from *Crying for Rain*, one of her top song. I'm sure most of you FMA fans would appreciate the vibes this one's giving. Most people said that she has the same energy as *Again by Yui* [[YouTube](https://youtu.be/JUewJm2ssBw) | [Spotify](spotify:track:6jBNUlTbv3fyn5t4izsdMa)], and I completely agree.
 
-![!YouTube:disclosure](0YF8vecQWYs "[[Spotify](spotify:track:1gUAX2ImxDsB3YDcyxMXlB)] Crying for Rain by Minami")
+![!YouTube#disclosure](0YF8vecQWYs "[[Spotify](spotify:track:1gUAX2ImxDsB3YDcyxMXlB)] Crying for Rain by Minami")
 
 This time it's actually an opening song from an anime, although I think this OP is more popular than the anime itself, at least that's what I've read. I haven't watched it yet, perhaps wait for the review some time later?
 
 ### Honorable music mentions
 
-![!YouTube:disclosure](K42ED-7PWAo "[[Spotify](spotify:track:32VX3DJCxPY3pMjirgOayx)] *Ambiguous* by GARNiDELiA ")
+![!YouTube#disclosure](K42ED-7PWAo "[[Spotify](spotify:track:32VX3DJCxPY3pMjirgOayx)] *Ambiguous* by GARNiDELiA ")
 
 Such a good and catchy OP from *Kill la Kill*. I'm the type of person who needs to see "it" first before I can fully feel the vibe and immerse myself in it, but I know some of you can listen to songs from Disney movies before it even hits the theater, so do what you want with this. But, I do recommend you to watch the anime first.
 
-![!YouTube:disclosure](Y-MNeN5dDtI "[[Spotify](spotify:track:0cR04cbujsPTTyKUazySY0)] *Open Blinds* by DROELOE")
+![!YouTube#disclosure](Y-MNeN5dDtI "[[Spotify](spotify:track:0cR04cbujsPTTyKUazySY0)] *Open Blinds* by DROELOE")
 
 DROELOE releases are always chill and melow, *Open Blinds* is no different than that. It suits the title well and puts you in the mood, you'll feel like you've just woke up on your bed in your room with sunray hitting your face.
 
-![!YouTube:disclosure](Qola1w5lkOM "[[Spotify](spotify:track:1sURUh8IehzWWp4udnhMpj)] *Butterfly Effect VIP* by Koven")
+![!YouTube#disclosure](Qola1w5lkOM "[[Spotify](spotify:track:1sURUh8IehzWWp4udnhMpj)] *Butterfly Effect VIP* by Koven")
 
 The original *Butterfly Effect* already has a place in me from the very first time I heard it in COTW Ep. 289 and this caught me off guard. It brings another take with a more upbeat style compared to the previous one.
 
-![!YouTube:disclosure](Ucp0F6nReyM "*Monstercat Mix Contest 2020 Compilation* by DJ FYTR from TheOnlyPixel19")
+![!YouTube#disclosure](Ucp0F6nReyM "*Monstercat Mix Contest 2020 Compilation* by DJ FYTR from TheOnlyPixel19")
 
 I've been listening to a lot of J-Pop lately and almost forgot why I used to love and listen to Monstercat almost everyday. This mix reminds me again and really brings back memories, especially all the crazy good mixes from the yearly contest around this time.
 
@@ -95,17 +95,17 @@ Have you ever wondered where that random ringing sound comes from? Did you somet
 
 ### Honorable video mentions
 
-![!YouTube:disclosure](jI3wTCgno9A "The Truth Behind the Hidden Worms in Your Strawberries")
+![!YouTube#disclosure](jI3wTCgno9A "The Truth Behind the Hidden Worms in Your Strawberries")
 
 Practically all berries has worms in it, but they're not all dangerous or harmful.
 
-![!YouTube:disclosure](Vnsc4RNb16g "Who Has A Cleaner Mouth, Dog or Human?")
+![!YouTube#disclosure](Vnsc4RNb16g "Who Has A Cleaner Mouth, Dog or Human?")
 
 You'll think twice before letting your dog (pets) lick you in the face.
 
-![!YouTube:disclosure](64nQ1KNq6C4 "[Part1] Fall Guys Montage from Critikal")
-![!YouTube:disclosure](N2f_Tc0a2jU "[Part2] Fall Guys Montage from Critikal")
-![!YouTube:disclosure](jmg3Dn3OJQ8 "[Part3] Fall Guys Montage from Critikal")
+![!YouTube#disclosure](64nQ1KNq6C4 "[Part1] Fall Guys Montage from Critikal")
+![!YouTube#disclosure](N2f_Tc0a2jU "[Part2] Fall Guys Montage from Critikal")
+![!YouTube#disclosure](jmg3Dn3OJQ8 "[Part3] Fall Guys Montage from Critikal")
 
 Just a fun compilation of Fall Guys game play, even.. no, especially when you're just watching.
 
@@ -253,8 +253,8 @@ Let me know if you like this format or have any feedback for the monthly digests
 
 ## Bonus - Monthly memes
 
-![!Video](https://preview.redd.it/ngwg54komaf51.gif?width=592&format=mp4&s=547dbebdc6ebd92a605a0761471a07c340d852a2 "[When client says the product sucks](https://www.reddit.com/r/ProgrammerHumor/comments/i4jdyf/when_client_says_the_product_sucks/)")
+![!Video#disclosure](https://preview.redd.it/ngwg54komaf51.gif?width=592&format=mp4&s=547dbebdc6ebd92a605a0761471a07c340d852a2 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/i4jdyf/when_client_says_the_product_sucks/)] When client says the product sucks")
 
-![!Video](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4 "XQC vs. Ninja - Twitch gaming summarized?")
+![!Video#disclosure](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4 "[[LSF](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4)] XQC vs. Ninja - Twitch gaming summarized?")
 
-[![Macaulay Culkin tweet](https://i.redd.it/bx8j1gwdbhj51.png)](https://www.reddit.com/r/memes/comments/ihf4sd/we_feel_old/)
+![Macaulay Culkin tweet#disclosure#flexible](https://i.redd.it/bx8j1gwdbhj51.png "[[Reddit](https://www.reddit.com/r/memes/comments/ihf4sd/we_feel_old/)] Wanna feel old?")
