--- a/content/curated/digest/202009.md
+++ b/content/curated/digest/202009.md
@@ -59,15 +59,15 @@ Other shows that aired their final episode this month too, just in time for the 
 
 ### Honorable music mentions
 
-![!YouTube:disclosure](n7VZxg9pxkg "[[Spotify](spotify:track:1dGF5ymTyBB2ZmOypkeU1F)] *veil* by 須田景凪 (Keina Suda)")
+![!YouTube#disclosure](n7VZxg9pxkg "[[Spotify](spotify:track:1dGF5ymTyBB2ZmOypkeU1F)] *veil* by 須田景凪 (Keina Suda)")
 
 I just started watching Fire Force season 1 and their ED was that good and so catchy that I didn't notice I've added it to my playlist before I even watched it.
 
-![!YouTube:disclosure](M2E79usIm2A "[[Spotify](spotify:track:5wPRJfP6UZXYori1sb1SJx)] *Together* by Pegboard Nerds & More Plastic")
+![!YouTube#disclosure](M2E79usIm2A "[[Spotify](spotify:track:5wPRJfP6UZXYori1sb1SJx)] *Together* by Pegboard Nerds & More Plastic")
 
 Pegboard Nerds & More Plastics returning once again to Monstercat with an amazing Instinct release for their Manifest/Together album.
 
-![!YouTube:disclosure](jb4ybTQwcdw "[[Spotify](spotify:track:5wPRJfP6UZXYori1sb1SJx)] *main actor* by 美波 (Minami)")
+![!YouTube#disclosure](jb4ybTQwcdw "[[Spotify](spotify:track:5wPRJfP6UZXYori1sb1SJx)] *main actor* by 美波 (Minami)")
 
 Even after a month, I really can't stop listening to these beautiful songs by Minami. This was the first single and the first video uploaded to YouTube. Its lyrics feels like an actual person expressing themselves at their hardest times, I'm sure some of you would agree.
 
@@ -81,18 +81,18 @@ But, I did follow these guys from LLS for quite some time and I've enjoyed their
 
 ### Honorable video mentions
 
-![!YouTube:disclosure](4w_r8as4uO0 "Pub Scrubs 20")
+![!YouTube#disclosure](4w_r8as4uO0 "Pub Scrubs 20")
 
 The man, the myth, the legend, he's back and danker than ever. It's been 3 years since the last upload, I've waited patiently for the return and he's actually back when we needed him the most.
 
 MikeMav was one of the first few YouTuber I've looked up to in terms of its editing skills. I've enjoyed more DotA content from him than the game itself. I'm certain you'll enjoy this if you've played DotA before, a bonus if you love memes too.
 
-![!YouTube:disclosure](W2Z7fbCLSTw "7 Database Paradigms")
+![!YouTube#disclosure](W2Z7fbCLSTw "7 Database Paradigms")
 
 What a great video explaining the various database paradigms that's available right now. I've known most of them, but there's some other paradigms that I'm not aware of, and some other that I'm only interested in but haven't quite spared any time to get into, until I watched this.
 
-![!YouTube:disclosure](exCNHEGnZ5M "Netflix's Cuties has gone too far")
-![!YouTube:disclosure](6j6o85CXnyM "Cuties Is Worse Than You Think")
+![!YouTube#disclosure](exCNHEGnZ5M "Netflix's Cuties has gone too far")
+![!YouTube#disclosure](6j6o85CXnyM "Cuties Is Worse Than You Think")
 
 If you still think everyone is overreacting about the new series from Netflix, watch both videos above. There's clearly something wrong with everyone who allowed this to happen.
 
@@ -116,11 +116,11 @@ Ref: [[Bloomberg](https://www.bloomberg.com/news/articles/2020-09-18/facebook-ac
 
 ### 02
 
-![!YouTube:disclosure](lG7OmThrq5g "Why bird nests aren't covered in poop")
+![!YouTube#disclosure](lG7OmThrq5g "Why bird nests aren't covered in poop")
 
 ### 03
 
-![!YouTube:disclosure](Y5_37k9HdJw "The secret history of dirt")
+![!YouTube#disclosure](Y5_37k9HdJw "The secret history of dirt")
 
 [[Reddit](https://www.reddit.com/r/jellyfin/comments/ilb2l0/dietpi_officially_supports_jellyfin_as_one_of_its/)] Dietpi officially supports Jellyfin as one of its optimized softwares 🎉
 
@@ -130,7 +130,7 @@ Ref: [[Bloomberg](https://www.bloomberg.com/news/articles/2020-09-18/facebook-ac
 
 ### 05
 
-![!YouTube:disclosure](gYbTBxPbYN4 "Wataten☆5's new song [preview is out](https://www.reddit.com/r/Watashi_ni_Tenshi/comments/imnuev/wataten5s_new_song_preview_is_out/)")
+![!YouTube#disclosure](gYbTBxPbYN4 "Wataten☆5's new song [preview is out](https://www.reddit.com/r/Watashi_ni_Tenshi/comments/imnuev/wataten5s_new_song_preview_is_out/)")
 
 [[Reddit](https://www.reddit.com/r/LifeProTips/comments/inom0h/lpt_always_explain_why_a_procedure_exists_so_the/)] Always explain WHY a procedure exists, so the person you're teaching doesn't blindly follow it without thinking.
 
