--- a/content/curated/digest/202009.md
+++ b/content/curated/digest/202009.md
@@ -225,46 +225,46 @@ As always, let me know if you like this format or have any feedback for the mont
 
 ## Bonus - Monthly memes
 
-[![optimistic developer vs. end user](https://i.redd.it/1h04vk2fjmk51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/ikvx3d/ooooof/)
+![optimistic developer vs. end user#disclosure#flexible](https://i.redd.it/1h04vk2fjmk51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/ikvx3d/ooooof/)] optimistic developer vs. end user")
 
-[![binary search meme](https://i.redd.it/xfdu3azcwuk51.png)](https://www.reddit.com/r/ProgrammerHumor/comments/ilmbyg/dont_do_it/)
+![binary search meme#disclosure#flexible](https://i.redd.it/xfdu3azcwuk51.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/ilmbyg/dont_do_it/)] binary search meme")
 
-[![abusive relationship isn't funny](https://i.redd.it/wghrw54bnwk51.jpg)](https://www.reddit.com/r/memes/comments/ilqhi0/that_women_needs_jesus/)
+![abusive relationship isn't funny#disclosure#flexible](https://i.redd.it/wghrw54bnwk51.jpg "[[Reddit](https://www.reddit.com/r/memes/comments/ilqhi0/that_women_needs_jesus/)] abusive relationship isn't funny")
 
-[![blessed are the JavaScript developers](https://i.redd.it/6u97mg9zg6l51.jpg)](https://www.reddit.com/r/programminghorror/comments/imlxie/js_is_at_it_again/)
+![blessed are the JavaScript developers#disclosure#flexible](https://i.redd.it/6u97mg9zg6l51.jpg "[[Reddit](https://www.reddit.com/r/programminghorror/comments/imlxie/js_is_at_it_again/)] blessed are the JavaScript developers")
 
-[![anime is always there for me](https://i.redd.it/1nb9vib2vvl51.jpg)](https://www.reddit.com/r/wholesomeanimemes/comments/ioptmm/anime_has_always_been_there_for_me/)
+![anime is always there for me#disclosure#flexible](https://i.redd.it/1nb9vib2vvl51.jpg "[[Reddit](https://www.reddit.com/r/wholesomeanimemes/comments/ioptmm/anime_has_always_been_there_for_me/)] anime is always there for me")
 
-[![dogbert's wisdom](https://i.redd.it/fxvtaw15zul51.jpg)](https://www.reddit.com/r/technicallythetruth/comments/ionshd/dogberts_wisdom/)
+![dogbert's wisdom#disclosure#flexible](https://i.redd.it/fxvtaw15zul51.jpg "[[Reddit](https://www.reddit.com/r/technicallythetruth/comments/ionshd/dogberts_wisdom/)] dogbert's wisdom")
 
-[!["urgent" emails](https://i.redd.it/l4nn0r2qq0m51.png)](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/ip5vqm/send_me_a_ticket_tomorrow/)
+!["urgent" emails#disclosure#flexible](https://i.redd.it/l4nn0r2qq0m51.png "[[Reddit](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/ip5vqm/send_me_a_ticket_tomorrow/)] \"urgent\" emails")
 
-[![clients be like "I found someone cheaper"](https://external-preview.redd.it/0SQEEK6OSigBxfEU1RmUNdefxmIRo1wZerMCpnikqa4.jpg?auto=webp&s=395c277be6aa9f78ed69c8172dc463a1b674530b)](https://www.reddit.com/r/memes/comments/islt4h/you_get_what_you_paid_for/)
+![clients be like "I found someone cheaper"#disclosure#flexible](https://external-preview.redd.it/0SQEEK6OSigBxfEU1RmUNdefxmIRo1wZerMCpnikqa4.jpg?auto=webp&s=395c277be6aa9f78ed69c8172dc463a1b674530b "[[Reddit](https://www.reddit.com/r/memes/comments/islt4h/you_get_what_you_paid_for/)] clients be like \"I found someone cheaper\"")
 
-[![code I wrote today vs. then](https://i.redd.it/sfq66mxdk7o51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/iw53om/is_it_me/)
+![code I wrote today vs. then#disclosure#flexible](https://i.redd.it/sfq66mxdk7o51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/iw53om/is_it_me/)] code I wrote today vs. then")
 
-[![Coming back to an issue you opened three years ago](https://i.redd.it/gvcd6r24u8o51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/iw8gmn/coming_back_to_an_issue_you_opened_three_years_ago/)
+![coming back to an issue you opened three years ago#disclosure#flexible](https://i.redd.it/gvcd6r24u8o51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/iw8gmn/coming_back_to_an_issue_you_opened_three_years_ago/)] coming back to an issue you opened three years ago")
 
-[![attention span of the internet summarized](https://i.redd.it/5uz1e824tfo51.jpg)](https://www.reddit.com/r/dankmemes/comments/iwud0r/the_attention_span_of_the_internet_summarised/)
+![attention span of the internet summarized#disclosure#flexible](https://i.redd.it/5uz1e824tfo51.jpg "[[Reddit](https://www.reddit.com/r/dankmemes/comments/iwud0r/the_attention_span_of_the_internet_summarised/)] attention span of the internet summarized")
 
-[![garbage collection](https://i.redd.it/8enervg2wjo51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/ix74sv/garbage_collection/)
+![garbage collection#disclosure#flexible](https://i.redd.it/8enervg2wjo51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/ix74sv/garbage_collection/)] garbage collection")
 
-[![when people ask me to recommend a text editor](https://i.redd.it/m1puenbcfzo51.jpg)](https://www.reddit.com/r/ProgrammerHumor/comments/iyluc4/kaboom/)
+![when people ask me to recommend a text editor#disclosure#flexible](https://i.redd.it/m1puenbcfzo51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/iyluc4/kaboom/)] when people ask me to recommend a text editor")
 
-![!Video](https://i.imgur.com/0GO8a9o.mp4 "[[Reddit](https://www.reddit.com/r/HighQualityGifs/comments/iywgrd/something_stinks_here/)]")
+![!Video#disclosure](https://i.imgur.com/0GO8a9o.mp4 "[[Reddit](https://www.reddit.com/r/HighQualityGifs/comments/iywgrd/something_stinks_here/)] something stinks here")
 
-[![users be like](https://i.redd.it/lktudl5uuip51.jpg)](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/j09ghm/users_be_like/)
+![users be like#disclosure#flexible](https://i.redd.it/lktudl5uuip51.jpg "[[Reddit](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/j09ghm/users_be_like/)] users be like")
 
-![!Video](https://v.redd.it/2o28y6og1zp51/DASH_720.mp4 "[What my company thinks I do as a software developer](https://www.reddit.com/r/ProgrammerHumor/comments/j1nbk4/what_my_company_thinks_i_do_as_a_software/)")
+![!Video#disclosure](https://v.redd.it/2o28y6og1zp51/DASH_720.mp4 "[[Reddit]((https://www.reddit.com/r/ProgrammerHumor/comments/j1nbk4/what_my_company_thinks_i_do_as_a_software/))] what my company thinks I do as a software developer")
 
-![!Video](https://v.redd.it/41brqx6mexp51/DASH_720.mp4 "[Husky dies inside](https://www.reddit.com/r/WatchPeopleDieInside/comments/j1gu1q/husky_gets_hit/)")
+![!Video#disclosure](https://v.redd.it/41brqx6mexp51/DASH_720.mp4 "[[Reddit]((https://www.reddit.com/r/WatchPeopleDieInside/comments/j1gu1q/husky_gets_hit/))] husky dies inside")
 
-![!Video](https://v.redd.it/ds9xe0udbtp51/DASH_720.mp4 "[Linux users installing a web browser](https://www.reddit.com/r/pcmasterrace/comments/j156nj/bro_you_still_use_windows/)")
+![!Video#disclosure](https://v.redd.it/ds9xe0udbtp51/DASH_720.mp4 "[[Reddit](https://www.reddit.com/r/pcmasterrace/comments/j156nj/bro_you_still_use_windows/)] linux users installing a web browser")
 
-[![lollipops are weird](https://i.redd.it/o35eygsroxp51.png)](https://www.reddit.com/r/technicallythetruth/comments/j1i0j9/this_ruined_my_day_completely/)
+![lollipops are weird#disclosure#flexible](https://i.redd.it/o35eygsroxp51.png "[[Reddit](https://www.reddit.com/r/technicallythetruth/comments/j1i0j9/this_ruined_my_day_completely/)] lollipops are weird")
 
-[![Every software engineer has experience this.](https://i.redd.it/dy6l5b4piwp51.jpg)](https://www.reddit.com/r/mildlyinfuriating/comments/j1dc3q/every_software_engineer_has_experience_this/)
+![every software engineer has experience this#disclosure#flexible](https://i.redd.it/dy6l5b4piwp51.jpg "[[Reddit](https://www.reddit.com/r/mildlyinfuriating/comments/j1dc3q/every_software_engineer_has_experience_this/)] every software engineer has experience this")
 
-![!Video](https://i.imgur.com/cVnLrtq.mp4 "[2-100 real quick](https://www.reddit.com/r/dankmemes/comments/j1rcog/2100_real_quick/)")
+![!Video#disclosure](https://i.imgur.com/cVnLrtq.mp4 "[[Reddit](https://www.reddit.com/r/dankmemes/comments/j1rcog/2100_real_quick/)] 2-100 real quick")
 
-[![js frameworks](https://i.redd.it/bxy89v8333q51.png)](https://www.reddit.com/r/ProgrammerHumor/comments/j1ylvg/javascript_framework/)
+![js frameworks#disclosure#flexible](https://i.redd.it/bxy89v8333q51.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j1ylvg/javascript_framework/)] js frameworks")
