Put images in disclosure element

--- a/content/curated/digest/202008.md
+++ b/content/curated/digest/202008.md
@@ -141,9 +141,7 @@ Ref: [[YouTube](https://youtu.be/msI2SxmED4E) | Reddit [P1](https://www.reddit.c
 
 ### 02
 
-[[Reddit](https://www.reddit.com/r/anime/comments/i2bgwl/kimetsu_no_yaiba_the_movie_mugen_train_new_key/) | [Preview](https://pbs.twimg.com/media/EeanPTfUMAEjSKu.jpg?name=large)] *Kimetsu no Yaiba the Movie: Mugen Train* new key visual
-
-![Kimetsu no Yaiba the Movie: Mugen Train new key visual](https://pbs.twimg.com/media/EeanPTfUMAEjSKu.jpg?name=large)
+![Kimetsu no Yaiba the Movie: Mugen Train new key visual#disclosure#flexible](https://pbs.twimg.com/media/EeanPTfUMAEjSKu.jpg?name=large "[[Reddit](https://www.reddit.com/r/anime/comments/i2bgwl/kimetsu_no_yaiba_the_movie_mugen_train_new_key/) | [Preview](https://pbs.twimg.com/media/EeanPTfUMAEjSKu.jpg?name=large)] *Kimetsu no Yaiba the Movie: Mugen Train* new key visual")
 
 [[Reddit](https://www.reddit.com/r/YouShouldKnow/comments/i29ljf/ysk_that_you_are_not_a_professionally_trained/)] YSK that you are not a professionally trained therapist and that the burden of helping someone who is suicidal is not on you.
 
@@ -189,9 +187,7 @@ Ref: [[YouTube](https://youtu.be/msI2SxmED4E) | Reddit [P1](https://www.reddit.c
 
 ### 13
 
-[[Reddit](https://www.reddit.com/r/wholesomememes/comments/i8pook/there_is_no_age_timeline_in_achieving_things_so/)] There is no age timeline in achieving things, so work at your own pace.
-
-![There is no age timeline in achieving things, so work at your own pace](https://i.redd.it/skgyh71fyng51.jpg)
+![There is no age timeline in achieving things, so work at your own pace#disclosure#flexible](https://i.redd.it/skgyh71fyng51.jpg "[[Reddit](https://www.reddit.com/r/wholesomememes/comments/i8pook/there_is_no_age_timeline_in_achieving_things_so/)] There is no age timeline in achieving things, so work at your own pace")
 
 ### 14
 
@@ -215,7 +211,7 @@ Ref: [[YouTube](https://youtu.be/msI2SxmED4E) | Reddit [P1](https://www.reddit.c
 
 [[Reddit](https://www.reddit.com/r/coolguides/comments/iazqy5/a_guide_for_creativity/)] Cool guide on how to finish (almost) anything
 
-![A guide for creativity](https://preview.redd.it/9kjrmx1ecfh51.jpg?width=640&crop=smart&auto=webp&s=200c83e2dcc1ec5f6401213025845608a615db9d)
+![A guide for creativity#disclosure#flexible](https://preview.redd.it/9kjrmx1ecfh51.jpg?width=640&crop=smart&auto=webp&s=200c83e2dcc1ec5f6401213025845608a615db9d "[[Reddit](https://www.reddit.com/r/coolguides/comments/iazqy5/a_guide_for_creativity/)] A guide for creativity")
 
 [[Reddit](https://www.reddit.com/r/lifehacks/comments/ibcyc5/i_thought_that_this_would_be_valuable_information/)] Confront your sexual harassers
 
@@ -228,6 +224,8 @@ Ref: [[YouTube](https://youtu.be/msI2SxmED4E) | Reddit [P1](https://www.reddit.c
 ### 24
 
 [[Reddit](https://www.reddit.com/r/Damnthatsinteresting/comments/ifcubo/worlds_tallest_people/)] World's tallest people
+
+![The Rom-Com-Dram Grid#disclosure#flexible](https://i.redd.it/23hs73qb2yi51.png "[[Reddit](https://www.reddit.com/r/anime/comments/ifo1vt/the_romcomdram_grid_64_romance_anime_roughly/) | [Preview](https://i.redd.it/23hs73qb2yi51.png)] The Rom-Com-Dram Grid: 64 romance anime roughly sorted")
 
 ### 26
 
@@ -256,5 +254,7 @@ Let me know if you like this format or have any feedback for the monthly digests
 ![!Video#disclosure](https://preview.redd.it/ngwg54komaf51.gif?width=592&format=mp4&s=547dbebdc6ebd92a605a0761471a07c340d852a2 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/i4jdyf/when_client_says_the_product_sucks/)] When client says the product sucks")
 
 ![!Video#disclosure](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4 "[[LSF](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4)] XQC vs. Ninja - Twitch gaming summarized?")
+
+![infinite scroll and paginate#disclosure#flexible](https://i.redd.it/o19z03900zi51.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/ifrc34/understanding_client_requirement/)] Understanding Client Requirement")
 
 ![Macaulay Culkin tweet#disclosure#flexible](https://i.redd.it/bx8j1gwdbhj51.png "[[Reddit](https://www.reddit.com/r/memes/comments/ihf4sd/we_feel_old/)] Wanna feel old?")
