Wrap video in flexible containers

--- a/content/curated/digest/202008.md
+++ b/content/curated/digest/202008.md
@@ -251,9 +251,9 @@ Let me know if you like this format or have any feedback for the monthly digests
 
 ## Bonus - Monthly memes
 
-![!Video#disclosure](https://preview.redd.it/ngwg54komaf51.gif?width=592&format=mp4&s=547dbebdc6ebd92a605a0761471a07c340d852a2 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/i4jdyf/when_client_says_the_product_sucks/)] When client says the product sucks")
+![!Video#disclosure#flexible](https://preview.redd.it/ngwg54komaf51.gif?width=592&format=mp4&s=547dbebdc6ebd92a605a0761471a07c340d852a2 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/i4jdyf/when_client_says_the_product_sucks/)] When client says the product sucks")
 
-![!Video#disclosure](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4 "[[LSF](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4)] XQC vs. Ninja - Twitch gaming summarized?")
+![!Video#disclosure#flexible](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4 "[[LSF](https://stream.livestreamfails.com/video/5efb74bba2bd2.mp4)] XQC vs. Ninja - Twitch gaming summarized?")
 
 ![infinite scroll and paginate#disclosure#flexible](https://i.redd.it/o19z03900zi51.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/ifrc34/understanding_client_requirement/)] Understanding Client Requirement")
 
