--- a/content/curated/digest/202009.md
+++ b/content/curated/digest/202009.md
@@ -165,7 +165,7 @@ Social
 
 [[Article](https://frontend.horse/articles/buttons-that-spark-joy/)] Buttons that Spark Joy
 
-![!Video](https://external-preview.redd.it/wnvYJKhZVCOyDW89ZmntDI6QakKnSKszxZnK9HBfsr4.gif?format=mp4&s=aefdfdf1afa1529fa7d8f4e3523814679301ac4b "Top Talent! [Lightning Goaltender Andrei Vasilevskiy looks between his opponent's legs to locate puck and make behind the back glove save](https://www.reddit.com/r/toptalent/comments/is4334/lightning_goaltender_andrei_vasilevskiy_looks/)")
+![!Video#disclosure#flexible](https://external-preview.redd.it/wnvYJKhZVCOyDW89ZmntDI6QakKnSKszxZnK9HBfsr4.gif?format=mp4&s=aefdfdf1afa1529fa7d8f4e3523814679301ac4b "[Reddit Top Talent!](https://www.reddit.com/r/toptalent/comments/is4334/lightning_goaltender_andrei_vasilevskiy_looks/) Lightning Goaltender Andrei Vasilevskiy looks between his opponent's legs to locate puck and make behind the back glove save")
 
 ### 15
 
@@ -251,20 +251,22 @@ As always, let me know if you like this format or have any feedback for the mont
 
 ![when people ask me to recommend a text editor#disclosure#flexible](https://i.redd.it/m1puenbcfzo51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/iyluc4/kaboom/)] when people ask me to recommend a text editor")
 
-![!Video#disclosure](https://i.imgur.com/0GO8a9o.mp4 "[[Reddit](https://www.reddit.com/r/HighQualityGifs/comments/iywgrd/something_stinks_here/)] something stinks here")
+![!Video#disclosure#flexible](https://i.imgur.com/0GO8a9o.mp4 "[[Reddit](https://www.reddit.com/r/HighQualityGifs/comments/iywgrd/something_stinks_here/)] something stinks here")
 
 ![users be like#disclosure#flexible](https://i.redd.it/lktudl5uuip51.jpg "[[Reddit](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/j09ghm/users_be_like/)] users be like")
 
-![!Video#disclosure](https://v.redd.it/2o28y6og1zp51/DASH_720.mp4 "[[Reddit]((https://www.reddit.com/r/ProgrammerHumor/comments/j1nbk4/what_my_company_thinks_i_do_as_a_software/))] what my company thinks I do as a software developer")
+![!Video#disclosure#flexible](https://v.redd.it/2o28y6og1zp51/DASH_720.mp4 "[[Reddit]((https://www.reddit.com/r/ProgrammerHumor/comments/j1nbk4/what_my_company_thinks_i_do_as_a_software/))] what my company thinks I do as a software developer")
 
-![!Video#disclosure](https://v.redd.it/41brqx6mexp51/DASH_720.mp4 "[[Reddit]((https://www.reddit.com/r/WatchPeopleDieInside/comments/j1gu1q/husky_gets_hit/))] husky dies inside")
+![!Video#disclosure#flexible](https://v.redd.it/41brqx6mexp51/DASH_720.mp4 "[[Reddit]((https://www.reddit.com/r/WatchPeopleDieInside/comments/j1gu1q/husky_gets_hit/))] husky dies inside")
 
-![!Video#disclosure](https://v.redd.it/ds9xe0udbtp51/DASH_720.mp4 "[[Reddit](https://www.reddit.com/r/pcmasterrace/comments/j156nj/bro_you_still_use_windows/)] linux users installing a web browser")
+![!Video#disclosure#flexible](https://v.redd.it/ds9xe0udbtp51/DASH_720.mp4 "[[Reddit](https://www.reddit.com/r/pcmasterrace/comments/j156nj/bro_you_still_use_windows/)] linux users installing a web browser")
 
 ![lollipops are weird#disclosure#flexible](https://i.redd.it/o35eygsroxp51.png "[[Reddit](https://www.reddit.com/r/technicallythetruth/comments/j1i0j9/this_ruined_my_day_completely/)] lollipops are weird")
 
 ![every software engineer has experience this#disclosure#flexible](https://i.redd.it/dy6l5b4piwp51.jpg "[[Reddit](https://www.reddit.com/r/mildlyinfuriating/comments/j1dc3q/every_software_engineer_has_experience_this/)] every software engineer has experience this")
 
-![!Video#disclosure](https://i.imgur.com/cVnLrtq.mp4 "[[Reddit](https://www.reddit.com/r/dankmemes/comments/j1rcog/2100_real_quick/)] 2-100 real quick")
+![!Video#disclosure#flexible](https://i.imgur.com/cVnLrtq.mp4 "[[Reddit](https://www.reddit.com/r/dankmemes/comments/j1rcog/2100_real_quick/)] 2-100 real quick")
 
 ![js frameworks#disclosure#flexible](https://i.redd.it/bxy89v8333q51.png "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j1ylvg/javascript_framework/)] js frameworks")
+
+![line 31 was not a bug, 14 bugs remaining#disclosure#flexible](https://i.redd.it/q9cov32d2bq51.jpg "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j2oj7l/compiler_warning_line_323_is_kinda_sus/)] line 31 kinda sus")
