Fix links and put in disclosure element

--- a/content/curated/digest/202009.md
+++ b/content/curated/digest/202009.md
@@ -136,7 +136,7 @@ Ref: [[Bloomberg](https://www.bloomberg.com/news/articles/2020-09-18/facebook-ac
 
 [[Reddit](https://www.reddit.com/r/anime/comments/imkxwd/dr_stone_stone_wars_new_visual/) | [Preview](https://img1.ak.crunchyroll.com/i/spire2/4f3c449f6e416dfead343309d39a0d9c1599176100_main.png)] "Dr. Stone: Stone Wars" new visual
 
-[![Dr. Stone: Stone Wars new visual](https://img1.ak.crunchyroll.com/i/spire2/4f3c449f6e416dfead343309d39a0d9c1599176100_main.png)](https://www.reddit.com/r/anime/comments/imkxwd/dr_stone_stone_wars_new_visual/)
+![Dr. Stone: Stone Wars new visual#disclosure#flexible](https://img1.ak.crunchyroll.com/i/spire2/4f3c449f6e416dfead343309d39a0d9c1599176100_main.png "[[Reddit](https://www.reddit.com/r/anime/comments/imkxwd/dr_stone_stone_wars_new_visual/) | [Preview](https://img1.ak.crunchyroll.com/i/spire2/4f3c449f6e416dfead343309d39a0d9c1599176100_main.png)] Dr. Stone: Stone Wars new visual")
 
 ### 07
 
@@ -169,7 +169,7 @@ Social
 
 ### 15
 
-[![eldredge tie and trinity knot](https://i.redd.it/ui7iqerys9n51.jpg)](https://www.reddit.com/r/nextfuckinglevel/comments/it4mm8/wore_the_trinity_at_a_wedding_and_got_crazy/)
+![eldredge tie and trinity knot#disclosure#flexible](https://i.redd.it/ui7iqerys9n51.jpg "[[Reddit](https://www.reddit.com/r/nextfuckinglevel/comments/it4mm8/wore_the_trinity_at_a_wedding_and_got_crazy/)] How to do an Eldredge Tie and Trinity Knot")
 
 ### 17
 
@@ -197,7 +197,7 @@ Social
 
 [[GitHub](https://github.com/dwmkerr/hacker-laws#kernighans-law)] Kernighan's Law - Debugging is twice as hard as writing the code in the first place. Therefore, if you write the code as cleverly as possible, you are, by definition, not smart enough to debug it.
 
-[![fall 2020 anime calender](https://i.redd.it/5n0tkv8jgeo51.png)](https://www.reddit.com/r/anime/comments/iwqe2o/fall_2020_anime_calendar/)
+[![fall 2020 anime calender](https://i.redd.it/5n0tkv8jgeo51.png "[[Reddit](https://www.reddit.com/r/anime/comments/iwqe2o/fall_2020_anime_calendar/) | [Preview](https://i.redd.it/5n0tkv8jgeo51.png)] Fall 2020 Anime Calender")
 
 ### 23
 
@@ -255,9 +255,9 @@ As always, let me know if you like this format or have any feedback for the mont
 
 ![users be like#disclosure#flexible](https://i.redd.it/lktudl5uuip51.jpg "[[Reddit](https://www.reddit.com/r/iiiiiiitttttttttttt/comments/j09ghm/users_be_like/)] users be like")
 
-![!Video#disclosure#flexible](https://v.redd.it/2o28y6og1zp51/DASH_720.mp4 "[[Reddit]((https://www.reddit.com/r/ProgrammerHumor/comments/j1nbk4/what_my_company_thinks_i_do_as_a_software/))] what my company thinks I do as a software developer")
+![!Video#disclosure#flexible](https://v.redd.it/2o28y6og1zp51/DASH_720.mp4 "[[Reddit](https://www.reddit.com/r/ProgrammerHumor/comments/j1nbk4/what_my_company_thinks_i_do_as_a_software/)] what my company thinks I do as a software developer")
 
-![!Video#disclosure#flexible](https://v.redd.it/41brqx6mexp51/DASH_720.mp4 "[[Reddit]((https://www.reddit.com/r/WatchPeopleDieInside/comments/j1gu1q/husky_gets_hit/))] husky dies inside")
+![!Video#disclosure#flexible](https://v.redd.it/41brqx6mexp51/DASH_720.mp4 "[[Reddit](https://www.reddit.com/r/WatchPeopleDieInside/comments/j1gu1q/husky_gets_hit/)] husky dies inside")
 
 ![!Video#disclosure#flexible](https://v.redd.it/ds9xe0udbtp51/DASH_720.mp4 "[[Reddit](https://www.reddit.com/r/pcmasterrace/comments/j156nj/bro_you_still_use_windows/)] linux users installing a web browser")
 
