--- a/content/posts/2020-10-14.protect-your-cookies.md
+++ b/content/posts/2020-10-14.protect-your-cookies.md
@@ -1,7 +1,7 @@
 ---
 title: Protect Your Cookies
 tags: tech, cookies, http
-description:
+description: Learn why you should care securing your cookies and how you can do it
 
 date:updated:
 image:en:
