add cover image

--- a/content/posts/2020-10-14.protect-your-cookies.md
+++ b/content/posts/2020-10-14.protect-your-cookies.md
@@ -4,7 +4,7 @@ tags: tech, cookies, http
 description: Learn why you should care securing your cookies and how you can do it
 
 date:updated:
-image:en:
+image:en: https://cdn.pixabay.com/photo/2016/11/17/22/53/biscuit-1832917_960_720.jpg
 ---
 
 Most modern web application would certainly use cookies to send and receive data between client and server. But, it's not always the safest solution if it isn't implemented correctly. Read on to learn more on why you need to protect your cookies and how you can do it.
