fix description and paraphrase a paragraph

--- a/content/posts/2020-10-14.protect-your-cookies.md
+++ b/content/posts/2020-10-14.protect-your-cookies.md
@@ -1,7 +1,7 @@
 ---
 title: Protect Your Cookies
 tags: tech, cookies, http
-description: Learn why you should care securing your cookies and how you can do it
+description: Learn why you should care about your cookies and how you can protect by securing it
 
 date:updated:
 image:en: https://cdn.pixabay.com/photo/2016/11/17/22/53/biscuit-1832917_960_720.jpg
@@ -13,7 +13,7 @@ If you haven't read my [previous post about JWT](posts/what-is-jwt-and-do-you-re
 
 ## Why you need to protect your cookies
 
-Those websites you log into on a daily basis knows who you are with HTTP cookies that is stored locally on every device you have it logged in with. Hence, that's why you don't need to re-enter your credentials every time you visit it, these cookies are basically your keys/password, it could also act on your behalf to communicate to the server and retrieve everything about you, including your whole identity on the server. It would be a catastrophic disaster if you're an admin and some users were to log in as you and tinker around with full unfettered administrative privilege. [More about that story](https://blog.codinghorror.com/protecting-your-cookies-httponly/)
+Those websites you log into on a daily basis knows who you are with HTTP cookies that is stored locally on every device you have it logged in with. That is why you don't need to re-enter your credentials every time you visit it, these cookies are basically your keys or passwords stored in the browser, it could also act on your behalf to communicate to the server and retrieve everything about you, including your whole identity on the server. It would be a catastrophic disaster if you're an admin and some users were to log in as you and tinker around with full unfettered administrative privilege. [More about this story](https://blog.codinghorror.com/protecting-your-cookies-httponly/)
 
 Cross-site scripting (XSS) is one the most dangerous vulnerabilities an application could have, and that's what could happen if you don't take your application security seriously. Stolen cookies are one of the most common thing that would happen when an XSS attack is executed, but it doesn't mean that it's the only thing that would get stolen. You should make sure your whole app is safe and secure to all known vulnerabilities and not just XSS. In a case where no one caught it and it happens, well.. it happens, and there's nothing you can do about it but to stop and fix it as soon as possible. But, you can take the necessary precautions and prepare if and when it happens.
 
